apps_v2/todo-app-backend/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-app-backend
  ports:
    - name: http
      nodePort: 32130 # open port on node
      protocol: TCP
      port: 5000 # internal, irrelevant now
      targetPort: 6789 # non-default port for the application, from deployment
