apps_v2/todo-app-backend/manifests/_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-app-backend-svc
              port:
                number: 5000
